      into the final tables at once rather than once per trove.
    * Repository commits now updates permission tables for all new troves
      at once.
    * Updates to latest tables are now done for all troves at once, and
      are based on the current latest entries and the new trove. Formerly
      they were done one at a time based on everything in the repository
      (through a view).
  o Build Changes:
    * When cooking groups where checkOnlyByDefaultDeps is set to False added
      dependencies will now inherit the byDefaultness of the depending
      component. (CNY-3195)
    * The imageGroup flag in group recipes now implies
      checkOnlyByDefaultDeps=False. (CNY-3195)
  o Bug Fixes:
    * cvc rdiff now functions correctly on trove versions where no
      previous version exists. (CNY-3218)

Changes in 2.0.49:
  o Bug Fixes:
    * Updates of flavored groups containing pre-update scripts no
      longer fail to continue after the critical update is applied.
      (CNY-3216)
    * Old rpm packages that do not have a PAYLOADCOMPRESSOR tag in their
      headers are correctly handled. (CNY-3210)

Changes in 2.0.48:
  o Bug Fixes:
    * A bug introduced in the previous release that caused installations
      of device nodes as a non-root user to crash has been fixed.
      (CNY-3208)

Changes in 2.0.47:
  o Bug Fixes:
    * Directory permissions are no longer unnecessarily updated if they
      have not changed. (CNY-3202)
    * A race condition in restoring files that share content has been
      fixed. The race involved changing the contents of the restored
      file before references to that file are restored. (CNY-3203)

Changes in 2.0.46:
  o New Features
    * If python-keyutils is available, cvc will try to interact with
      the user's session keyring. (CNY-3190)
    * Conary now uses xz in preference to unlzma to decompress lzma
      data. (CNY-3194)
    * A new function, parseChangeSpec, that parses a single trove